# protodune-pds-light

./: .gitignore  README.md
docs/: pdhd_pds_session_summary.md  pdvd_pds_findings.md
pdhd/fcl/: pds_flat_tree.fcl  standard_reco_protodunehd_keepup.fcl
pdhd/maps/: opch_vendor.txt
pdhd/pdsoffset/: CMakeLists.txt
pdhd/pdsoffset/pdsoffset/: CMakeLists.txt  FlashOpDetAna_module.cc  PDSDecoWaveformDump_module.cc  PDSRawWaveformDump_module.cc  TriggerOffsetAna_module.cc  run_trigger_offset.fcl
pdhd/pdsoffset/ups/: product_deps
pdhd/scripts/: run_workflow.sh
pdhd/viewer/: flash_viewer.py
pdvd/fcl/: dump_protodunevd_geometry.fcl  pdvd_pds_flash.fcl  pdvd_pds_ophit.fcl  pdvd_pds_raw.fcl
pdvd/flash/: group_ophits.py
pdvd/maps/: pdvd_offlinechan_to_opdet.csv  pdvd_v5_opdet_positions.csv
pdvd/scripts/: pdvd_dump_flash.py  pdvd_dump_rawwf.py  run_pdvd_flash.sh  run_pdvd_pdsraw.sh  run_pdvd_rawwf_dump.sh
pdvd/viewer/: pdvd_flash_viewer.py  pdvd_raw_viewer.py
studies/pdvd_flash_finder/: BUG_REPORT.md  dump_protodunevd_v2_geometry.fcl  dump_protodunevd_v4_geometry.fcl  pdvd_pds_flash_nogeo.fcl  pdvd_pds_flash_retune.fcl  pdvd_pds_flash_test.fcl
studies/pdvd_flash_finder/patch/: OpFlashFinderVerticalDrift.patch  OpFlashFinderVerticalDrift_module.cc
studies/plotting/: dump_flash_breakdown.C  dump_flash_generic.C  dump_ophit.C  dump_ophit_rel.C  dump_ophit_rel2.C  ophit_times.C  plot_flash_multiplicity_cmp.py  plot_pdvd_opdets.py  plot_pdvd_pe.py  plot_timing_cmp.py  plot_timing_profile.py
